--- a/views/index.html
+++ b/views/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="css/main.css">
-    
-    <title>My Super Awesome Template</title>
+    <link rel="stylesheet" href="sass/main.scss">
+
+    <title>Nintendo Switch</title>
 </head>
 <body>
     <main>
-        <h1>You can do it!</h1>
-        <img src="images/smiley.jpeg" alt="smile!">
+        <h1>Purchase your Nintendo Switch Today!</h1>
+        <img src="public/images/NS.png" alt="NintendoSwitch">
     </main>
 
     <script src="js/main.js"></script>
