--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <main>
-        <h1>Purchase your Nintendo Switch Today!</h1>
-        <img src="public/images/NS.png" alt="NintendoSwitch">
+        <h1>Purchase your Nintendo Switch Today while you can!</h1>
+         <img src="images/NS.png" alt="Nintendo Switch">
     </main>
 
     <script src="js/main.js"></script>
