--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,11 @@
 </head>
 <body>
     <main>
-        <h1>Purchase your Nintendo Switch Today!</h1>
-        <img src="public/images/NS.png" alt="NintendoSwitch">
+        <h1>Purchase your Nintendo Switch Today while you can!</h1>
+         <img src="images/NS.png" alt="Nintendo Switch">
+         <button type="button" name="button">$399.99</button>
+
+         <h1>Quantities Are Limit Order Today!</h1>
     </main>
 
     <script src="js/main.js"></script>
