--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
     <main>
         <h1>Purchase your Nintendo Switch Today while you can!</h1>
          <img src="images/NS.png" alt="Nintendo Switch">
+        <h1>Only for a limited time</h1>
     </main>
 
     <script src="js/main.js"></script>
