added more css and images

--- a/views/index.html
+++ b/views/index.html
@@ -12,10 +12,26 @@
 </head>
 <body>
     <main>
-        <h1>Purchase your Nintendo Switch Today while you can!</h1>
+      <img src="images/Nintendo_Logo.png" alt="Logo">
+        <h1>Purchase your Nintendo Switch Today!</h1>
          <img src="images/NS.png" alt="Nintendo Switch">
          <button type="button" name="button">$399.99</button>
-        <h1>Only for a limited time</h1>
+
+<div class="section2">
+        <h1>Play Classic Games from anywhere with Switch Online Subscription</h1>
+         <button type="button" name="button">Learn More!</button>
+       </div>
+
+<div class="section3">
+        <h1>Play Classic Games from anywhere with Switch Online Subscription</h1>
+           <img src="images/switchlite.jpg" alt="SwitchLite">
+         </div>
+
+
+
+
+
+
     </main>
 
     <script src="js/main.js"></script>
