--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,11 @@
 main{width:90%;text-align:center;margin:0 auto; background-color: yellow;}
 
+#section2{background-color:red;}
+
+#section3{background-color: white;}
 
 h1{color: #296d98;font-size: 30px;}
 
-button{ height: 20px;width: 70px;font-size: 10px;text-align: center;margin-left: auto;margin-right: auto; display: block;}
+button{ height: 20px;width: 70px;font-size: 15px;text-align: center;margin-left: auto;margin-right: auto; display: block;}
 
 /*# sourceMappingURL=main.css.map */
