--- a/views/index.html
+++ b/views/index.html
@@ -12,10 +12,12 @@
 </head>
 <body>
     <main>
+      <div class="section1">
       <img src="images/Nintendo_Logo.png" alt="Logo">
         <h1>Purchase your Nintendo Switch Today!</h1>
          <img src="images/NS.png" alt="Nintendo Switch">
          <button type="button" name="button">$399.99</button>
+       </div>
 
 <div class="section2">
         <h1>Play Classic Games from anywhere with Switch Online Subscription</h1>
@@ -23,8 +25,9 @@
        </div>
 
 <div class="section3">
-        <h1>Play Classic Games from anywhere with Switch Online Subscription</h1>
+        <h1>Introducing the New Switch Lite!</h1>
            <img src="images/switchlite.jpg" alt="SwitchLite">
+           <button type="button" name="button">Purchase!</button>
          </div>
 
 
