--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
 
 <div class="section2">
         <h1>Play Classic Games from anywhere with Switch Online Subscription</h1>
-         <button type="button" name="button">Learn More!</button>
+         <button type="button" name="button">Subscribe!</button>
        </div>
 
 <div class="section3">
