--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,7 @@
 
 <div class="section2">
         <h1>Play Classic Games from anywhere with Switch Online Subscription</h1>
+         <img src="images/Switchclassic.jpeg" alt="Nintendo Switch">
          <button type="button" name="button">Subscribe!</button>
        </div>
 
