--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,11 +3,16 @@ main{width:90%;text-align:center;margin:0 auto;}
 .section1{background-color:yellow;}
 
 .section1 img{
-  height: 100px;
-  width: 200px;
+  height: 200px;
+  width: 300px;
 }
 
 .section2{background-color:red;}
+
+.section2 img{
+  height: 200px;
+  width: 300px;
+}
 
 .section3{background-color: white;}
 
