--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,16 @@
     <title>Nintendo Switch</title>
 </head>
 <body>
+  <nav class="mainNav">
+  <ul>
+  <li><a href="#">Home</a></li>
+  <li><a href="#">My Nintendo ID/a></li>
+  <li><a href="#">Contact Mario</a></li>
+      </ul>
+      </nav>
     <main>
+
+
       <div class="section1">
       <img src="images/Nintendo_Logo.png" alt="Logo">
         <h1>Purchase your Nintendo Switch Today!</h1>
@@ -30,10 +39,6 @@
            <img src="images/switchlite.jpg" alt="SwitchLite">
            <button type="button" name="button">Purchase!</button>
          </div>
-
-
-
-
 
 
     </main>
