--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
   <nav class="mainNav">
   <ul>
   <li><a href="#">Home</a></li>
-  <li><a href="#">My Nintendo ID/a></li>
+  <li><a href="#">My Nintendo ID</a></li>
   <li><a href="#">Contact Mario</a></li>
       </ul>
       </nav>
