--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,9 @@ main{width:90%;text-align:center;margin:0 auto;}
 .mainNav{
   height: 1px;
   margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 
   }
 
@@ -12,7 +15,7 @@ main{width:90%;text-align:center;margin:0 auto;}
   }
 
   .mainNav ul li {
-    font-size: 10px;
+    font-size: 14px;
     display: inline;
     cursor: pointer;
     margin-right:1px;
@@ -21,14 +24,14 @@ main{width:90%;text-align:center;margin:0 auto;}
   .mainNav ul li a
   {
     color: black;
-    padding: 20px;
+    padding: 15px;
     text-decoration: none;
   }
 
 
   .mainNav ul li a:hover {
     padding: 20px;
-    background-color: black;
+    background-color: pink;
     color: white;
   }
 
