--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,10 @@
 main{width:90%;text-align:center;margin:0 auto;}
 
+
+
+
+@media screen and (min-width: 800px) {
+
 .mainNav{
   height: 1px;
   margin-top: 50px;
@@ -50,8 +55,8 @@ padding-top: 30px;}
 
 .section3{background-color: pink;}
 
-.section2 img{
-  height: 200px;
+.section3 img{
+  height: 400px;
   width: 300px;
 }
 
@@ -59,4 +64,5 @@ h1{color: #296d98;font-size: 30px;}
 
 button{ height: 20px;width: 100px;font-size: 10px;text-align: center;margin-left: auto;margin-right: auto; display: block;}
 
+}
 /*# sourceMappingURL=main.css.map */
