--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,12 +2,54 @@ main{width:90%;text-align:center;margin:0 auto;}
 
 
 
+@media screen and (min-width: 375px) {
+
+  .topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.mainNav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.mainNav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.mainNav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.mainNav .icon {
+  display: none;
+}
+}
+
+@media screen and (max-width: 600px) {
+  .mainNav a:not(:first-child) {display: none;}
+  .mainNav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+}
+
 
 @media screen and (min-width: 800px) {
 
 .mainNav{
   height: 1px;
-  margin-top: 50px;
+  margin-top: 10px;
   text-align: center;
 
   }
@@ -56,8 +98,8 @@ padding-top: 30px;}
 .section3{background-color: pink;}
 
 .section3 img{
-  height: 400px;
-  width: 300px;
+  height: 500px;
+  width: 700px;
 }
 
 h1{color: #296d98;font-size: 30px;}
@@ -65,4 +107,3 @@ h1{color: #296d98;font-size: 30px;}
 button{ height: 20px;width: 100px;font-size: 10px;text-align: center;margin-left: auto;margin-right: auto; display: block;}
 
 }
-/*# sourceMappingURL=main.css.map */
