--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,134 @@
 main{width:90%;text-align:center;margin:0 auto;}
 
+@media screen and (min-width: 375px) {
+
+  .mainNav{
+    height: 1px;
+    margin-top: 10px;
+    text-align: center;
+
+    }
+
+    .mainNav ul{
+      padding: 0px;
+      margin: 0px;
+    }
+
+    .mainNav ul li {
+      font-size: 14px;
+      display: inline;
+      cursor: pointer;
+      margin-right:1px;
+    }
+
+    .mainNav ul li a
+    {
+      color: black;
+      padding: 15px;
+      text-decoration: none;
+    }
+
+
+    .mainNav ul li a:hover {
+      padding: 25px;
+      background-color: pink;
+      color: white;
+    }
+
+
+    .section1{background-color:yellow;
+    padding-top: 30px;}
+
+    .section1 img{
+      height: 100px;
+      width: 200px;
+    }
+
+    .section2{background-color:red;}
+
+    .section2 img{
+      height: 100px;
+      width: 200px;
+    }
+
+    .section3{background-color: pink;}
+
+    .section3 img{
+      height: 150px;
+      width: 300px;
+    }
+
+    h1{color: #296d98;font-size: 30px;}
+
+    button{ height: 20px;width: 100px;font-size: 10px;text-align: center;margin-left: auto;margin-right: auto; display: block;}
+
+
+}
+
+@media screen and (min-width: 600px) {
+
+  .mainNav{
+    height: 1px;
+    margin-top: 10px;
+    text-align: center;
+
+    }
+
+    .mainNav ul{
+      padding: 0px;
+      margin: 0px;
+    }
+
+    .mainNav ul li {
+      font-size: 14px;
+      display: inline;
+      cursor: pointer;
+      margin-right:1px;
+    }
+
+    .mainNav ul li a
+    {
+      color: black;
+      padding: 15px;
+      text-decoration: none;
+    }
+
+
+    .mainNav ul li a:hover {
+      padding: 25px;
+      background-color: pink;
+      color: white;
+    }
+
+  .section1{background-color:yellow;
+  padding-top: 30px;}
+
+  .section1 img{
+    height: 200px;
+    width: 400px;
+  }
+
+  .section2{background-color:red;}
+
+  .section2 img{
+    height: 200px;
+    width: 300px;
+  }
+
+  .section3{background-color: pink;}
+
+  .section3 img{
+    height: 500px;
+    width: 700px;
+  }
+
+  h1{color: #296d98;font-size: 30px;}
+
+  button{ height: 20px;width: 100px;font-size: 10px;text-align: center;margin-left: auto;margin-right: auto; display: block;}
+
+
+}
+
 
 
 @media screen and (min-width: 800px) {
@@ -64,3 +193,4 @@ h1{color: #296d98;font-size: 30px;}
 button{ height: 20px;width: 100px;font-size: 10px;text-align: center;margin-left: auto;margin-right: auto; display: block;}
 
 }
+/*# sourceMappingURL=main.css.map */
