--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,6 +32,34 @@ main{width:90%;text-align:center;margin:0 auto;}
     display: none;
   }
 
+
+    .mainNav ul{
+      padding: 0px;
+      margin: 0px;
+    }
+
+    .mainNav ul li {
+      font-size: 14px;
+      display: inline;
+      cursor: pointer;
+      margin-right:1px;
+    }
+
+    .mainNav ul li a
+    {
+      color: black;
+      padding: 15px;
+      text-decoration: none;
+    }
+
+
+    .mainNav ul li a:hover {
+      padding: 25px;
+      background-color: pink;
+      color: white;
+    }
+
+
     .section1{background-color:yellow;
     padding-top: 30px;}
 
