--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,36 +2,12 @@ main{width:90%;text-align:center;margin:0 auto;}
 
 @media screen and (min-width: 375px) {
 
-
-  .mainNav {
-    overflow: hidden;
-    background-color: #333;
-  }
-
-  .mainNav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
+  .mainNav{
+    height: 1px;
+    margin-top: 10px;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
 
-  .mainNav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-
-  .mainNav a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
-
-  .mainNav .icon {
-    display: none;
-  }
-
+    }
 
     .mainNav ul{
       padding: 0px;
