--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
   <ul>
   <li><a href="#">Home</a></li>
   <li><a href="#">My Nintendo ID</a></li>
-  <li><a href="#">Contact Mario</a></li>
+  <li><a href="#">Contact</a></li>
       </ul>
       </nav>
     <main>
